@@ -1,6 +1,6 @@
 #! /bin/sh
-# Copyright (C) 1996, 1997, 1998, 2000, 2001, 2002, 2003
-# Free Software Foundation, Inc.
+# Copyright (C) 1996, 1997, 1998, 2000, 2001, 2002, 2003, 2010 Free
+# Software Foundation, Inc.
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -19,6 +19,8 @@
 # Also, make sure config.h is properly rebuilt.
 
 . ./defs || Exit 1
+
+set -e
 
 cat > configure.in << 'END'
 AC_INIT
@@ -55,5 +57,3 @@ $sleep
 echo 'After.' > subdir/config.hin
 $MAKE || Exit 1
 $FGREP 'After.' subdir/config.h || Exit 1
-
-Exit 0
