@@ -1,3 +1,10 @@
+2010-04-20  Stefano Lattarini  <stefano.lattarini@gmail.com>
+
+	Use `set -e' in confsub.test (avoids possible false negatives).
+	* tests/confsub.test: Enable shell `errexit' flag, and related
+	changes (this helps avoiding some possible minor false negatives).
+	Also, bumped copyright years.
+
 2010-04-20  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	Fix -Werror handling for presence of configure.in and configure.ac.
